deploy/base/deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ilog
  namespace: ilog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ilog
  template:
    metadata:
      labels:
        app: ilog
    spec:
      containers:
        - name: ilog
          image: gitlab-registry.empa.ch/openbis-tools/ilog:master
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: gitlab-registry-credentials
