deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ilog
  namespace: ilog
spec:
  selector:
    app: ilog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
