deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ilog
  namespace: ilog
annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/managed: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-http"
spec:
  ingressClassName: traefik
  rules:
      - host: ilog.empa.ch
        http:
          paths:
            - backend:
                service:
                  name: ilog
                  port:
                    number: 80
              path: /
              pathType: Prefix
  tls:
      - hosts:
          - ilog.empa.ch
